# find_my_mates

./: .gitmodules  .pre-commit-config.yaml  CMakeList.txt  CMakeLists.txt  README.md  package.xml  person_height.py
launch/: angular_test.launch  control_test.launch  find_my_mates.launch  find_test.launch  image_test.launch  make_map.launch  rpn.launch  stand_img_and_turtle.launch  test.launch  test_rotate.launch  try_srv_odom.launch  try_srv_rotate.launch
map/: exhibition_bordaux_alina.pgm  exhibition_bordaux_alina.yaml  exhibition_bordaux_alina2.yaml.pgm  exhibition_bordaux_alina2.yaml.yaml  exhibition_bordaux_alina3.pgm  exhibition_bordaux_alina3.yaml  exhibition_bordaux_alina4.pgm  exhibition_bordaux_alina4.yaml
msg/: ArmAction.msg  Feature.msg  ImgData.msg  Info.msg  Ksntl.msg  LidarData.msg  MoveAction.msg  Mtfsl.msg  RealTime.msg  Rsp.msg  cp.msg  gngt.msg  mng.msg  rp.msg
src/: action.py  audio.py  audio_system.py  control_system.py  control_test.py  detect_color_realtime.py  find_move.py  fmm_CIC.py  image_system.py  lidar.py  main.py  memo._controltxt  memo.txt  memo_audio.txt  move.py  move_back.py  move_poinrt_navi.txt  move_straight.py  move_test.py  person_height.py  point_to_point.py  realtime_BioS_old_cmpr.py  test.py  test_move.py
src/control/: angular.py  control_system.py  explain.txt  lidar.py  move_odom.py  move_only_between_position.py  move_to_only_position.py  rotate.py  rotate_bot.py  test_rotate_bot.py  try_odom.py  try_rotate.py  try_test.py  (+6 more)
srv/: Camera_msg.srv  MoveArm.srv  OdomMove.srv  OdomTurn.srv  SpeechToText.srv  isMeaning.srv
(+28 files in other folders)
